# truenas-master-mcp

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Justfile  LICENSE  README.md
.github/workflows/: auto-close-conflicted-prs.yml  ci.yml  release.yml
docs/: openapi.yaml
scripts/: generate-openapi-client.sh  generate-truenas-spec.py  generate_types.py
scripts/openapi-specs/: truenas-api.json
scripts/openapi-specs/truenas-rust-client/: Cargo.toml  README.md
scripts/openapi-specs/truenas-rust-client/.openapi-generator/: FILES
scripts/openapi-specs/truenas-rust-client/docs/: Alert.md  App.md  Catalog.md  Certificate.md  CloudSyncTask.md  CreateDatasetRequest.md  CreateGroupRequest.md  CreateUserRequest.md  CreateVmRequest.md  Dataset.md  DefaultApi.md  Disk.md  DockerImage.md  DockerImagePullRequest.md  Group.md  Interface.md  IscsiLun.md  IscsiTarget.md  KubernetesCluster.md  KubernetesNode.md  KubernetesPod.md  NfsExport.md  Pool.md  PoolQueryOptions.md  PoolSnapshotCreateRequest.md  ReplicationTask.md  Route.md  Service.md  SmbShare.md  Snapshot.md  SystemInfo.md  Task.md  UpdateUserRequest.md  User.md  Vm.md  VmCloneRequest.md
scripts/openapi-specs/truenas-rust-client/src/apis/: configuration.rs  default_api.rs
scripts/openapi-specs/truenas-rust-client/src/models/: alert.rs  app.rs  catalog.rs  certificate.rs  cloud_sync_task.rs  create_dataset_request.rs  create_group_request.rs  create_user_request.rs  create_vm_request.rs  dataset.rs  disk.rs  docker_image.rs  docker_image_pull_request.rs  group.rs  interface.rs  iscsi_lun.rs  iscsi_target.rs  kubernetes_cluster.rs  kubernetes_node.rs  kubernetes_pod.rs  mod.rs  nfs_export.rs  pool.rs  pool_query_options.rs  pool_snapshot_create_request.rs  replication_task.rs  route.rs  service.rs  smb_share.rs  snapshot.rs  system_info.rs  task.rs  update_user_request.rs  user.rs  vm.rs  vm_clone_request.rs
src/: api_client.rs  cache.rs  client.rs  config.rs  error.rs  lib.rs  main.rs  server.rs  tools.rs
tests/: api_client.rs  cache.rs  client.rs  config.rs  error.rs  integration.rs  server.rs  tools.rs
