[package]
name = "truenas-master-mcp"
version = "0.1.0"
edition = "2024"
description = "Official MCP server for TrueNAS API access"
license = "MIT"
repository = "https://github.com/hongkongkiwi/truenas-master-mcp"

[dependencies]
# Official MCP SDK
rmcp = { version = "0.8", features = ["server"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
async-trait = "0.1"
schemars = "0.8"

# HTTP client for TrueNAS API
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"

# HTTP/SSE server transports
axum = "0.8"
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["cors", "fs"] }
http-body-util = "0.1"
futures-util = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.15"

# Base64 encoding
base64 = "0.22"

# URL encoding
urlencoding = "2.1"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
