[package]
name = "truenas-master-mcp"
version = "0.1.9"
edition = "2024"
description = "Official MCP server for TrueNAS API access"
license = "MIT"
repository = "https://github.com/hongkongkiwi/truenas-master-mcp"

[lib]
path = "src/lib.rs"

[[bin]]
name = "truenas-master-mcp"
path = "src/main.rs"

[features]
default = ["scale", "core"]
scale = []
core = []

[dependencies]
# Official MCP SDK
rmcp = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
async-trait = "0.1"
schemars = "0.8"

# HTTP client for TrueNAS API
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"

# HTTP/SSE server transports
axum = "0.8"
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
http-body-util = "0.1"
futures-util = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.15"
serde_yaml = "0.9"

# Base64 encoding
base64 = "0.22"

# URL encoding
urlencoding = "2.1"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Caching
moka = { version = "0.12", features = ["future"] }

# Time for cache timestamps
chrono = { version = "0.4", features = ["std"] }

# OpenSSL for static musl/Alpine builds
openssl = { version = "0.10", features = ["vendored"] }

# OpenAPI generated client
serde_repr = "0.1"

[dev-dependencies]
# Testing frameworks
rstest = "0.23"
test-case = "3.3"
async-trait = "0.1"

# HTTP mocking
mockito = "1.5"

# Tokio test utilities
tokio = { version = "1.42", features = ["test-util", "rt-multi-thread"] }
